--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <div class="container mx-auto p-4 sm:p-6 max-w-4xl">
     <!-- ডার্ক মোড টগল -->
     <div class="flex justify-end mb-4">
-      <button id="themeToggle" class="bg-gray-200 dark:bg-gray-700 text-gray-900 dark:text-gray-100 p-2 rounded-full">
-        🌙
+      <button id="themeToggle" class="bg-gray-200 dark:bg-gray-700 text-gray-900 dark:text-gray-100 p-2 rounded-full w-10 h-10 flex items-center justify-center">
+        <span id="themeIcon">🌙</span>
       </button>
     </div>
 
@@ -120,13 +120,30 @@
 
     // ডার্ক মোড টগল
     const themeToggle = document.getElementById('themeToggle');
-    const prefersDark = window.matchMedia('(prefers-color-scheme: dark)');
-    if (prefersDark.matches) document.body.classList.add('dark');
+    const themeIcon = document.getElementById('themeIcon');
+
+    // প্রাথমিক থিম সেট করা
+    function setInitialTheme() {
+      const savedTheme = localStorage.getItem('theme');
+      if (savedTheme === 'dark' || (!savedTheme && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark');
+        themeIcon.textContent = '☀️';
+      } else {
+        document.documentElement.classList.remove('dark');
+        themeIcon.textContent = '🌙';
+      }
+    }
+
+    // থিম টগল করা
     themeToggle.addEventListener('click', () => {
-      document.body.classList.toggle('dark');
-      localStorage.setItem('theme', document.body.classList.contains('dark') ? 'dark' : 'light');
+      document.documentElement.classList.toggle('dark');
+      const isDark = document.documentElement.classList.contains('dark');
+      themeIcon.textContent = isDark ? '☀️' : '🌙';
+      localStorage.setItem('theme', isDark ? 'dark' : 'light');
     });
-    if (localStorage.getItem('theme') === 'dark') document.body.classList.add('dark');
+
+    // পেজ লোডে প্রাথমিক থিম সেট করা
+    setInitialTheme();
 
     function addExpense() {
       const date = document.getElementById('date').value;
