--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>খরচ ট্র্যাকার</title>
+
+  <!-- font awesome cdn -->
+  <script src="https://kit.fontawesome.com/c25e1ed245.js" crossorigin="anonymous"></script>
+  <!-- DaisyUI cdn -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -34,11 +41,11 @@
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100 min-h-screen transition-colors duration-300">
   <div class="container mx-auto p-4 sm:p-6 max-w-4xl">
     <!-- Dark Mode Toggle -->
-    <div class="flex justify-end mb-4">
+    <!-- <div class="flex justify-end mb-4">
       <button id="themeToggle" class="bg-gray-200 dark:bg-gray-700 text-gray-900 dark:text-gray-100 p-2 rounded-full w-10 h-10 flex items-center justify-center">
         <span id="themeIcon">🌙</span>
       </button>
-    </div>
+    </div> -->
 
     <h1 class="text-2xl sm:text-3xl font-bold text-center mb-6">প্রতিদিনের খরচ ট্র্যাকার</h1>
 
@@ -116,6 +123,27 @@
       <div id="monthlyReport" class="text-base sm:text-lg"></div>
     </div>
 
+    <!-- Footer section -->
+    <div class="mt-3">
+      <footer class="footer rounded-md sm:footer-horizontal bg-gray-800 text-neutral-content items-center py-4 md:pr-4">
+        <aside class="w-full lg:grid-flow-col text-center  items-center -mb-4 md:-mb-0">
+          <img class="w-[50px] text-center rounded-sm justify-self-center" src="src/bissawjit.png" alt="">
+          <p class="text-gray-500">Copyright © 2025 - All right reserved by <b>Budget Tracker App | BISSAWJIT</b></p>
+        </aside>
+        <nav class="grid-flow-col gap-4 md:place-self-center justify-self-center md:justify-self-end -mt-5 md:-mt-0">
+          <a href="https://www.facebook.com/bissawjitchandraw" target="_blank" class="text-2xl lg:text-3xl text-gray-500 hover:text-gray-300">
+            <i class="fa-brands fa-facebook"></i>
+          </a>          
+          <a href="https://www.youtube.com/bissawjit/" target="_blank" class="text-2xl lg:text-3xl text-gray-500 hover:text-gray-300">
+            <i class="fa-brands fa-youtube"></i>
+          </a>
+          <a href="https://www.facebook.com/bissawjit" target="_blank" class="text-2xl lg:text-3xl text-gray-500 hover:text-gray-300">
+            <i class="fa-brands fa-instagram"></i>
+          </a>          
+        </nav>
+      </footer>
+    </div>
+
     <!-- Edit Modal -->
     <div id="editModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
       <div class="bg-white dark:bg-gray-800 p-4 sm:p-6 rounded-lg shadow-md w-full max-w-lg">
@@ -140,6 +168,7 @@
       </div>
     </div>
   </div>
+
 
   <script>
     let expenses = JSON.parse(localStorage.getItem('expenses')) || [];
