--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>খরচ ট্র্যাকার</title>
+  <link rel="icon" type="image/x-icon" href="src/budgetTracker.ico">
 
   <!-- font awesome cdn -->
   <script src="https://kit.fontawesome.com/c25e1ed245.js" crossorigin="anonymous"></script>
@@ -134,7 +135,7 @@
           <a href="https://www.facebook.com/bissawjitchandraw" target="_blank" class="text-2xl lg:text-3xl text-gray-500 hover:text-gray-300">
             <i class="fa-brands fa-facebook"></i>
           </a>          
-          <a href="https://www.youtube.com/bissawjit/" target="_blank" class="text-2xl lg:text-3xl text-gray-500 hover:text-gray-300">
+          <a href="https://www.youtube.com/@BissawjitChandraw" target="_blank" class="text-2xl lg:text-3xl text-gray-500 hover:text-gray-300">
             <i class="fa-brands fa-youtube"></i>
           </a>
           <a href="https://www.facebook.com/bissawjit" target="_blank" class="text-2xl lg:text-3xl text-gray-500 hover:text-gray-300">
