--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <a href="https://www.youtube.com/@BissawjitChandraw" target="_blank" class="text-2xl lg:text-3xl text-gray-500 hover:text-gray-300">
             <i class="fa-brands fa-youtube"></i>
           </a>
-          <a href="https://www.facebook.com/bissawjit" target="_blank" class="text-2xl lg:text-3xl text-gray-500 hover:text-gray-300">
+          <a href="https://www.instagram.com/bissawjit18" target="_blank" class="text-2xl lg:text-3xl text-gray-500 hover:text-gray-300">
             <i class="fa-brands fa-instagram"></i>
           </a>          
         </nav>
